@@ -317,6 +317,7 @@ run_dump_test "mov1c"
 run_dump_test "mov1d"
 run_dump_test "pr17935-1"
 run_dump_test "pr17935-2"
+run_dump_test "pr18160"
 
 # Must be native with the C compiler
 if { [isnative] && [which $CC] != 0 } {
